// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`heq-client subscribe happy path: app events sequence 1`] = `
Array [
  "load-config-begin",
  "load-config-end",
  "load-transform-begin",
  "load-transform-end",
  "connect-snapshot-begin",
  "connect-snapshot-end",
  "connect-events-begin",
  "connect-events-end",
  "incoming-event",
  "incoming-projection",
  "incoming-event",
  "incoming-projection",
  "incoming-event",
  "incoming-projection",
  "incoming-event",
  "incoming-projection",
  "incoming-event",
  "incoming-projection",
  "incoming-event",
  "incoming-projection",
  "incoming-event",
  "incoming-projection",
  "incoming-event",
  "incoming-projection",
  "incoming-event",
  "incoming-projection",
  "persistence-complete",
  "subscription-catchup",
  "process-interrupted",
  "process-exit",
]
`;

exports[`heq-client subscribe happy path: departments collection must match 1`] = `
Array [
  Object {
    "__op": 2,
    "__v": 3,
    "id": "c95803b4-b29c-40a9-923e-fc2225e001f8",
    "members": 2,
    "name": "marketing",
  },
  Object {
    "__op": 2,
    "__v": 6,
    "id": "f7a094c4-dd60-40c1-bcfd-1650b5a57cc8",
    "members": 1,
    "name": "IT",
  },
]
`;

exports[`heq-client subscribe happy path: incoming-event 1 must match 1`] = `
Object {
  "_l": "DEBUG",
  "payload": Object {
    "event": Object {
      "id": 1,
      "meta": Object {
        "client": "test-commiter-1",
        "clientVersion": "1.0.0",
        "occurredAt": 1505728418175,
      },
      "payload": Object {
        "id": "c95803b4-b29c-40a9-923e-fc2225e001f8",
        "name": "marketing",
      },
      "type": "DEPARTMENT_CREATED",
    },
  },
  "type": "incoming-event",
}
`;

exports[`heq-client subscribe happy path: incoming-event 2 must match 1`] = `
Object {
  "_l": "DEBUG",
  "payload": Object {
    "event": Object {
      "id": 2,
      "meta": Object {
        "client": "test-commiter-1",
        "clientVersion": "1.0.0",
        "occurredAt": 1505728418175,
      },
      "payload": Object {
        "age": 21,
        "department_id": "c95803b4-b29c-40a9-923e-fc2225e001f8",
        "email": "abc@events.com",
        "name": "ABC",
        "uid": "9d5901c0-4228-4832-adb2-41cb3a8797cd",
      },
      "type": "USER_REGISTERED",
    },
  },
  "type": "incoming-event",
}
`;

exports[`heq-client subscribe happy path: incoming-event 3 must match 1`] = `
Object {
  "_l": "DEBUG",
  "payload": Object {
    "event": Object {
      "id": 3,
      "meta": Object {
        "client": "test-commiter-1",
        "clientVersion": "1.0.0",
        "occurredAt": 1505728521586,
      },
      "payload": Object {
        "age": 23,
        "department_id": "c95803b4-b29c-40a9-923e-fc2225e001f8",
        "email": "def@events.com",
        "name": "DEF",
        "uid": "6d90bd42-62ef-4d3c-91aa-6f517fdcc8da",
      },
      "type": "USER_REGISTERED",
    },
  },
  "type": "incoming-event",
}
`;

exports[`heq-client subscribe happy path: incoming-event 4 must match 1`] = `
Object {
  "_l": "DEBUG",
  "payload": Object {
    "event": Object {
      "id": 4,
      "meta": Object {
        "client": "test-commiter-1",
        "clientVersion": "1.0.0",
        "occurredAt": 1505728418175,
      },
      "payload": Object {
        "id": "f7a094c4-dd60-40c1-bcfd-1650b5a57cc8",
        "name": "IT",
      },
      "type": "DEPARTMENT_CREATED",
    },
  },
  "type": "incoming-event",
}
`;

exports[`heq-client subscribe happy path: incoming-event 5 must match 1`] = `
Object {
  "_l": "DEBUG",
  "payload": Object {
    "event": Object {
      "id": 5,
      "meta": Object {
        "client": "test-commiter-1",
        "clientVersion": "1.0.0",
        "occurredAt": 1505728523586,
      },
      "payload": Object {
        "email": "newemail@events.com",
        "uid": "9d5901c0-4228-4832-adb2-41cb3a8797cd",
      },
      "type": "USER_EMAIL_UPDATED",
    },
  },
  "type": "incoming-event",
}
`;

exports[`heq-client subscribe happy path: incoming-event 6 must match 1`] = `
Object {
  "_l": "DEBUG",
  "payload": Object {
    "event": Object {
      "id": 6,
      "meta": Object {
        "client": "test-commiter-1",
        "clientVersion": "1.0.0",
        "occurredAt": 1505728528648,
      },
      "payload": Object {
        "age": 27,
        "department_id": "f7a094c4-dd60-40c1-bcfd-1650b5a57cc8",
        "email": "ghi@events.com",
        "name": "GHI",
        "uid": "3822c08a-2967-40bb-8c99-d3c76b569561",
      },
      "type": "USER_REGISTERED",
    },
  },
  "type": "incoming-event",
}
`;

exports[`heq-client subscribe happy path: incoming-event 7 must match 1`] = `
Object {
  "_l": "DEBUG",
  "payload": Object {
    "event": Object {
      "id": 7,
      "payload": Object {
        "email": "updated",
        "uid": "9d5901c0-4228-4832-adb2-41cb3a8797cd",
      },
      "type": "USER_EMAIL_UPDATED",
    },
  },
  "type": "incoming-event",
}
`;

exports[`heq-client subscribe happy path: incoming-event 8 must match 1`] = `
Object {
  "_l": "DEBUG",
  "payload": Object {
    "event": Object {
      "id": 8,
      "payload": Object {
        "email": "failing",
        "uid": "9d5901c0-4228-4832-adb2-41cb3a8797cd",
      },
      "type": "USER_EMAIL_UPDATED",
    },
  },
  "type": "incoming-event",
}
`;

exports[`heq-client subscribe happy path: incoming-event 9 must match 1`] = `
Object {
  "_l": "DEBUG",
  "payload": Object {
    "event": Object {
      "id": 9,
      "payload": Object {
        "email": "updated",
        "uid": "9d5901c0-4228-4832-adb2-41cb3a8797cd",
      },
      "type": "USER_EMAIL_UPDATED",
    },
  },
  "type": "incoming-event",
}
`;

exports[`heq-client subscribe happy path: users collection must match 1`] = `
Array [
  Object {
    "__op": 1,
    "__v": 9,
    "age": 21,
    "department_id": "c95803b4-b29c-40a9-923e-fc2225e001f8",
    "email": "updated",
    "name": "ABC",
    "uid": "9d5901c0-4228-4832-adb2-41cb3a8797cd",
  },
  Object {
    "__op": 1,
    "__v": 3,
    "age": 23,
    "department_id": "c95803b4-b29c-40a9-923e-fc2225e001f8",
    "email": "def@events.com",
    "name": "DEF",
    "uid": "6d90bd42-62ef-4d3c-91aa-6f517fdcc8da",
  },
  Object {
    "__op": 1,
    "__v": 6,
    "age": 27,
    "department_id": "f7a094c4-dd60-40c1-bcfd-1650b5a57cc8",
    "email": "ghi@events.com",
    "name": "GHI",
    "uid": "3822c08a-2967-40bb-8c99-d3c76b569561",
  },
]
`;

exports[`heq-client subscribe side-effects: sideEffectsLogs must match 1`] = `
Array [
  "------------------------------------ side effect 9d5901c0-4228-4832-adb2-41cb3a8797cd",
  "------------------------------------ side effect 6d90bd42-62ef-4d3c-91aa-6f517fdcc8da",
  "------------------------------------ side effect 3822c08a-2967-40bb-8c99-d3c76b569561",
]
`;
